# vector-mcp

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.json  deno.json  main.ts  opencode.jsonc
migrations/: 20260426230407_init.down.sql  20260426230407_init.up.sql
scripts/: load.ts
src/: chunker.ts  config.ts  db.ts  embedding.rs  embedding.ts  knowledge-worker.ts  loader.ts  logger.ts  main.rs  models.rs  parser.rs  source.ts
